syntax = "proto3";
package inference.inference;

option go_package = "github.com/productscience/inference/x/inference/types";

// Stores mapping between external chain tokens and their CW20 counterparts
message TokenContract {
  string external_chain = 1;           // e.g. "ethereum" 
  string external_contract = 2;        // original chain contract address
  string cw20_contract = 3;           // our CW20 contract address
  string name = 4;                    // token name
  string symbol = 5;                  // token symbol
  uint32 decimals = 6;               // token decimals
}

// For storing the CW20 code ID after uploading the contract code
message TokenCodeID {
  uint64 code_id = 1;
} 